# arm-neural-networks

./: .gitattributes  .gitignore  README.md
fdeep-mobile-mobilenet/app/: build.gradle
fdeep-mobile-mobilenet/app/src/main/: AndroidManifest.xml
fdeep-mobile-mobilenet/app/src/main/cpp/: native-lib.cpp
fdeep-mobile-mobilenet/app/src/main/cpp/include/fdeep/: import_model.hpp
fdeep-mobile-mobilenet/app/src/main/res/values/: strings.xml
fdeep-mobile-unet/app/: CMakeLists.txt  build.gradle
fdeep-mobile-unet/app/src/main/: AndroidManifest.xml
fdeep-mobile-unet/app/src/main/cpp/: native-lib.cpp
fdeep-mobile-unet/app/src/main/res/values/: strings.xml
fdeep-mobile-unet/bkp/frugally-deep/test/: applications_performance.cpp
fdeep-mobile-unet/eigen/: .hg_archival.txt
fdeep-rpi-mobilenet/: CMakeListsBase.txt  CMakeListsNeon.txt  CMakeListsNeonOpenMp.txt  Makefile  main.cpp  runtest.sh
fdeep-rpi-unet/: CMakeLists.txt  main.cpp
tensorflow-mobile-mobilenet/app/: build.gradle
tensorflow-mobile-mobilenet/app/src/main/: AndroidManifest.xml
tensorflow-mobile-mobilenet/app/src/main/res/layout/: activity_main.xml
tensorflow-mobile-mobilenet/app/src/main/res/values/: strings.xml
tensorflow-mobile-mobilenet/gradle/wrapper/: gradle-wrapper.properties
tensorflow-mobile-unet/app/: build.gradle
tensorflow-mobile-unet/app/src/main/: AndroidManifest.xml
tensorflow-mobile-unet/app/src/main/cpp/include/fdeep/: model.hpp
tf-rpi-mobilenet/: main.py  model.json  runtest.sh  test.py
tf-rpi-mobilenet/test/: conv.sh
tf-rpi-unet/: model.py  test.py
(+12 files in other folders)
